# daily_stock_analysis

./: .gitignore  README.md  analyzer.py  backtester.py  capital_flow.py  company_intel.py  config.py  feishu_doc.py  main.py  market_analyzer.py  notification.py  pyproject.toml  requirements.txt  run_screen_analyze_telegram.py  run_screen_analyze_telegram.sh  scheduler.py  search_service.py  setup.cfg  stock_analyzer.py  stock_screener.py  storage.py  test_akshare_fetcher_edges.py  test_analyzer_core.py  test_analyzer_hard_rules.py  test_analyzer_rule_edges.py  test_backtester.py  test_capital_flow.py  test_company_intel.py  test_company_intel_edges.py  test_config.py  test_data_provider_base.py  test_data_provider_edge_cases.py  test_data_provider_fetchers.py  test_env.py  test_feishu_doc.py  test_main.py  test_market_analyzer.py  test_module_entrypoints.py  test_notification.py  test_scheduler.py  (+16 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  daily_analysis.yml
daily_analysis/: __init__.py  config.py  storage.py
daily_analysis/analysis/: __init__.py  analyzer.py  company_intel.py  market_analyzer.py  stock_analyzer.py  stock_screener.py
data_provider/: __init__.py  akshare_fetcher.py  baostock_fetcher.py  base.py  tushare_fetcher.py  yfinance_fetcher.py
docs/: hot_sector_llm_radar_development_plan.md  strategy_logic_and_optimization.md  theme_radar_verification_optimization_plan.md
prompts/: __init__.py  theme_discovery.py
scripts/: run_screen_analyze_telegram.sh
src_data/: email_test.py  header_inject.py  llm_example.py
(+18 files in other folders)
