[project]
name = "daily-analysis"
version = "0.1.0"
description = "Daily analysis project"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12.0",
    "baostock>=0.8.0",
    "fake-useragent>=1.4.0",
    "google-generativeai>=0.8.0",
    "google-search-results>=2.4.0",
    "httpx[socks]>=0.28.1",
    "lark-oapi>=1.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.0",
    "tavily-python>=0.3.0",
    "tenacity>=8.2.0",
    "tushare>=1.4.0",
    "yfinance>=0.2.0",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "__pycache__", ".env", "venv", ".venv"]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]  # assert 语句在测试中是允许的
